--- a/nmct.ssa.cashlessproject.itcompany/Views/Register/Edit.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Register/Edit.cshtml
@@ -2,20 +2,22 @@
 @Styles.Render("~/Content/datepicker.css")
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Nieuw register toevoegen</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
+        <h4>OrganisationRegister</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
+        @Html.HiddenFor(model => model.Register.ID)
+        
         <div class="form-group">
             <label class="control-label col-md-2" for="Organisation.ID">Naam vereniging</label>
             <div class="col-md-10">
@@ -23,7 +25,14 @@
                     <select class="form-control" name="Organisation.ID">
                         @foreach (var organisation in ViewBag.Organisations)
                         {
-                            <option value="@organisation.ID">@organisation.OrganisationName</option>
+                            if (Model.Organisation.ID == @organisation.ID)
+                            {
+                                <option value="@organisation.ID" selected>@organisation.OrganisationName</option>
+                            }
+                            else
+                            {
+                                <option value="@organisation.ID">@organisation.OrganisationName</option>
+                            }
                         }
                     </select>
                 </div>
@@ -49,7 +58,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Register.PurchaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Register.PurchaseDate, new { @class = "form-control datepicker"})
+                @Html.TextBoxFor(model => model.Register.PurchaseDate, new { @class = "form-control datepicker" })
                 @Html.ValidationMessageFor(model => model.Register.PurchaseDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -57,14 +66,30 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Register.ExpiresDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Register.ExpiresDate, new { @class = "form-control datepicker"})
+                @Html.TextBoxFor(model => model.Register.ExpiresDate, new { @class = "form-control datepicker" })
                 @Html.ValidationMessageFor(model => model.Register.ExpiresDate, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.FromDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.FromDate, new { @class = "form-control datepicker" })
+                @Html.ValidationMessageFor(model => model.FromDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.UntilDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.UntilDate, new { @class = "form-control datepicker" })
+                @Html.ValidationMessageFor(model => model.FromDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
