database aanmaken vereniging

--- a/nmct.ssa.cashlessproject.itcompany/Views/Register/Create.cshtml
+++ b/nmct.ssa.cashlessproject.itcompany/Views/Register/Create.cshtml
@@ -21,6 +21,7 @@
             <div class="col-md-10">
                 <div class="dropdown">
                     <select class="form-control" name="Organisation.ID">
+                        <option value="0">Geen vereniging</option>
                         @foreach (var organisation in ViewBag.Organisations)
                         {
                             <option value="@organisation.ID">@organisation.OrganisationName</option>
