--- a/nmct.ba.cashlessproject.ui.management/View/Login.xaml
+++ b/nmct.ba.cashlessproject.ui.management/View/Login.xaml
@@ -2,19 +2,41 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:nmct.ba.cashlessproject.ui.management.ViewModel"
-        Title="Management App" Height="520" Width="780">
+        Title="Management App" Height="800" Width="1280">
     <Window.DataContext>
         <vm:LoginVM />
     </Window.DataContext>
     <Grid>
-        <StackPanel>
-            <TextBlock Text="Login:" Margin="4"/>
-            <TextBox Text="{Binding Username}" Margin="8"/>
-            <TextBlock Text="Password:" Margin="4"/>
-            <!-- replace with password box and "break" the MVVM pattern: http://stackoverflow.com/questions/1483892/how-to-bind-to-a-passwordbox-in-mvvm-->
-            <PasswordBox Name="txtPassword" Margin="8"/>
-            <Button Content="Aanmelden" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=txtPassword}" Margin="8"/>
-            <TextBlock Foreground="Red" Text="{Binding Error}"/>
-        </StackPanel>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="6" Text="Welkom, gelieve aan te melden om door te gaan naar het management systeem"/>
+        <TextBlock Grid.Column="3" Grid.Row="2" Text="Login:"/>
+        <TextBox Grid.Column="6" Grid.ColumnSpan="3" Grid.Row="2" Text="{Binding Username}"/>
+        <TextBlock Grid.Column="3" Grid.Row="3" Text="Password:"/>
+        <!-- replace with password box and "break" the MVVM pattern: http://stackoverflow.com/questions/1483892/how-to-bind-to-a-passwordbox-in-mvvm-->
+        <PasswordBox Grid.Row="3" Grid.Column="6" Grid.ColumnSpan="3"  Name="txtPassword" Margin="8,20,8,20" VerticalContentAlignment="Center"/>
+        <Button Grid.Column="3" Grid.Row="4" Grid.ColumnSpan="6" Content="Aanmelden" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=txtPassword}"/>
+        <TextBlock Grid.Column="3" Grid.Row="5" Grid.ColumnSpan="6" Foreground="Red" Text="{Binding Error}"/>
     </Grid>
 </Window>
