--- a/nmct.ba.cashlessproject.ui.management/View/MainWindow.xaml
+++ b/nmct.ba.cashlessproject.ui.management/View/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:v="clr-namespace:nmct.ba.cashlessproject.ui.management.View"
         xmlns:vm="clr-namespace:nmct.ba.cashlessproject.ui.management.ViewModel"
         x:Name="window"
-        Title="Management App" Height="520" Width="780">
+        Title="Management App" Height="800" Width="1280">
     <Window.DataContext>
         <vm:ApplicationVM/>
     </Window.DataContext>
@@ -38,7 +38,7 @@
         <ItemsControl ItemsSource="{Binding Pages}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Button Content="{Binding Name}" Command="{Binding DataContext.ChangePageCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{Binding}"/>
+                    <Button Width="150px" Content="{Binding Name}" Command="{Binding DataContext.ChangePageCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{Binding}"/>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
             <ItemsControl.ItemsPanel>
