--- a/nmct.ba.cashlessproject.ui.customers/View/MainWindow.xaml
+++ b/nmct.ba.cashlessproject.ui.customers/View/MainWindow.xaml
@@ -14,6 +14,9 @@
         <DataTemplate DataType="{x:Type vm:RegisterVM}">
             <v:Register/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:ChargingVM}">
+            <v:Charging/>
+        </DataTemplate>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
