--- a/nmct.ba.cashlessproject.ui.customers/View/Register.xaml
+++ b/nmct.ba.cashlessproject.ui.customers/View/Register.xaml
@@ -2,9 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:c="clr-namespace:nmct.ba.cashlessproject.ui.customers.ViewModel"
+             xmlns:cv="clr-namespace:nmct.ba.cashlessproject.ui.customers.converters"
              mc:Ignorable="d" 
              d:DesignHeight="410" d:DesignWidth="780">
+    <UserControl.DataContext>
+        <c:RegisterVM />
+    </UserControl.DataContext>
+    <UserControl.Resources>
+        <cv:StringToImageConverter x:Key="StringToImageConverter"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -30,21 +38,25 @@
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.ColumnSpan="3" Text="Identificatienummer"/>
-        <TextBox Grid.Column="3" Grid.ColumnSpan="3" />
+        <TextBlock Grid.ColumnSpan="3" Text="Registreer" Style="{StaticResource Titel}"/>
 
-        <TextBlock Grid.Row="1" Grid.ColumnSpan="3" Text="Naam" />
-        <TextBox Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" />
+        <TextBlock Grid.Row="1" Grid.ColumnSpan="3" Text="Voornaam" />
+        <TextBox Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" Text="{Binding Customer.Firstname}" IsEnabled="False" />
 
-        <TextBlock Grid.Row="2" Grid.ColumnSpan="3" Text="Straat + nr"/>
-        <TextBox Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="3" />
+        <TextBlock Grid.Row="2" Grid.ColumnSpan="3" Text="Familienaam" />
+        <TextBox Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="3" Text="{Binding Customer.Lastname}" IsEnabled="False" />
 
-        <TextBlock Grid.Row="3" Grid.ColumnSpan="3" Text="Postcode + gemeente"/>
-        <TextBox Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="3" />
+        <TextBlock Grid.Row="3" Grid.ColumnSpan="3" Text="Straat + nr"/>
+        <TextBox Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="3" Text="{Binding Customer.Street}" IsEnabled="False" />
 
-        <TextBlock Grid.Row="4" Grid.ColumnSpan="3" Text="Foto"/>
-        <Button Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" Content="Upload" />
+        <TextBlock Grid.Row="4" Grid.ColumnSpan="3" Text="Postcode"/>
+        <TextBox Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" Text="{Binding Customer.Postcode}" IsEnabled="False" />
 
-        <Button Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="3" Content="Registreer" />
+        <TextBlock Grid.Row="5" Grid.ColumnSpan="3" Text="Gemeente"/>
+        <TextBox Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="3" Text="{Binding Customer.City}" IsEnabled="False" />
+
+        <Image Grid.Row="1" Grid.Column="7" Grid.RowSpan="4" Grid.ColumnSpan="4" Source="{Binding Customer.Picture, Converter={StaticResource StringToImageConverter}}"/>
+
+        <Button Grid.Row="6" Grid.ColumnSpan="6" Content="Registreer" Command="{Binding RegisterCustomerCommand}" />
     </Grid>
 </UserControl>
