--- a/nmct.ba.cashlessproject.ui.employees/View/Order.xaml
+++ b/nmct.ba.cashlessproject.ui.employees/View/Order.xaml
@@ -2,22 +2,26 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:e="clr-namespace:nmct.ba.cashlessproject.ui.employees.ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="410" d:DesignWidth="780">
+             d:DesignHeight="800" d:DesignWidth="1280">
+    <UserControl.DataContext>
+        <e:OrderVM />
+    </UserControl.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="7*"/>
             <RowDefinition Height="1*"/>
+            <RowDefinition Height="7*"/>
         </Grid.RowDefinitions>
 
         <Grid>
             <Border Style="{StaticResource BorderBoven}"/>
-            <TextBlock Style="{StaticResource Titel}" Text="Kassierster x"/>
+            <TextBlock Style="{StaticResource Titel}" Text="Kassierster"/>
+            <TextBlock Style="{StaticResource Titel}" Text="{Binding Employee}" Margin="160,8,8,8"/>
         </Grid>
 
         <Grid Grid.Row="1">
@@ -45,35 +49,37 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.ColumnSpan="2" Text="Id klant:"/>
-            <TextBox Grid.Column="1" Grid.ColumnSpan="2"/>
+            <TextBlock Grid.ColumnSpan="2" Text="Naam klant:"/>
+            <TextBox Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Customer.Firstname}" IsEnabled="False"/>
 
-            <TextBlock Grid.Column="3" Grid.ColumnSpan="2" Text="Naam:"/>
-            <TextBox Grid.Column="4" Grid.ColumnSpan="2"/>
+            <TextBlock Grid.Column="3" Grid.ColumnSpan="2" Text="Voornaam klant:"/>
+            <TextBox Grid.Column="4" Grid.ColumnSpan="2" Text="{Binding Customer.Lastname}" IsEnabled="False"/>
 
             <TextBlock Grid.Column="6" Grid.ColumnSpan="2" Text="Saldo:"/>
-            <TextBox Grid.Column="7" Grid.ColumnSpan="2"/>
+            <TextBox Grid.Column="7" Grid.ColumnSpan="2" Text="{Binding Customer.Balance}"/>
 
-            <TextBlock Grid.Column="9" Grid.ColumnSpan="3" Text="(wijzig door geld in te steken)"/>
+            <Button Grid.Column="9" Grid.ColumnSpan="3" Content="Wijzig Saldo" />
 
             <Border Style="{StaticResource BorderKassa}"/>
 
             <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Text="Producten:" />
-            <ListBox Grid.Row="2" Grid.RowSpan="5" Grid.ColumnSpan="3" />
+            <ListBox Grid.Row="2" Grid.RowSpan="5" Grid.ColumnSpan="3" x:Name="lstProducten" ItemsSource="{Binding Products}" DisplayMemberPath="ProductName" SelectedItem="{Binding SelectedProduct}"/>
 
-            <TextBlock Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Text="Aantal: x" />
-            <Button Grid.Row="2" Grid.Column="3" Content="7" />
-            <Button Grid.Row="2" Grid.Column="4" Content="8" />
-            <Button Grid.Row="2" Grid.Column="5" Content="9" />
-            <Button Grid.Row="3" Grid.Column="3" Content="4" />
-            <Button Grid.Row="3" Grid.Column="4" Content="5" />
-            <Button Grid.Row="3" Grid.Column="5" Content="6" />
-            <Button Grid.Row="4" Grid.Column="3" Content="1" />
-            <Button Grid.Row="4" Grid.Column="4" Content="2" />
-            <Button Grid.Row="4" Grid.Column="5" Content="3" />
+            <TextBlock Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Text="Aantal:" />
+            <TextBlock Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Margin="50,8,8,8" Text="{Binding Aantal}" />
+            
+            <Button Grid.Row="4" Grid.Column="3" Content="1" Command="{Binding VerhoogAantalCommand}" CommandParameter="1" />
+            <Button Grid.Row="4" Grid.Column="4" Content="2" Command="{Binding TwoCommand}" />
+            <Button Grid.Row="4" Grid.Column="5" Content="3" Command="{Binding ThreeCommand}" />
+            <Button Grid.Row="3" Grid.Column="3" Content="4" Command="{Binding FourCommand}" />
+            <Button Grid.Row="3" Grid.Column="4" Content="5" Command="{Binding FiveCommand}" />
+            <Button Grid.Row="3" Grid.Column="5" Content="6" Command="{Binding SixCommand}" />
+            <Button Grid.Row="2" Grid.Column="3" Content="7" Command="{Binding SevenCommand}" />
+            <Button Grid.Row="2" Grid.Column="4" Content="8" Command="{Binding EightCommand}" />
+            <Button Grid.Row="2" Grid.Column="5" Content="9" Command="{Binding NineCommand}" />
 
-            <Button Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="3" Content="Toevoegen" />
-            <Button Grid.Row="6" Grid.Column="3" Grid.ColumnSpan="3" Content="Annuleer" />
+            <Button Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="3" Content="Annuleer aantal" />
+            <Button Grid.Row="6" Grid.Column="3" Grid.ColumnSpan="3" Content="Toevoegen" />
 
             <TextBlock Grid.Row="1" Grid.Column="6" Grid.ColumnSpan="2" Text="Bestelde producten:"/>
             <ListBox Grid.Row="2" Grid.Column="6" Grid.RowSpan="4" Grid.ColumnSpan="3" />
